k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hitl-refund
  namespace: hitl-refund
spec:
  ingressClassName: webapprouting.kubernetes.azure.com

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hitl-refund
                port:
                  number: 80
